src/dnsmasq.h

#  define _(S) (S)
#  define _(S) gettext(S)
struct all_addr {
    union {
        struct in_addr addr4;
#ifdef HAVE_IPV6
        struct in6_addr addr6;
#endif
        /* for log_query */
        struct {
            uint16_t keytag, algo, digest;
        } log;
        /* for log_query */
        struct {
            uint32_t rcode;
        } rcode;
        /* for cache_insert of DNSKEY, DS */
        struct {
            uint16_t _class, type;
        } dnssec;
    } addr;
};
struct cname {
    int ttl, flag;
    char* alias, * target;
    struct cname* next, * targetp;
};
struct interface_name {
    char* name; /* domain name */
    char* intr; /* interface name */
    int family; /* AF_INET, AF_INET6 or zero for both */
    struct addrlist* addr;
    struct interface_name* next;
};
union bigname {
    char name[MAXDNAME];
    union bigname* next; /* freelist */
};
struct blockdata {
    struct blockdata* next;
    unsigned char key[KEYBLOCK_LEN];
};
struct crec {
    struct crec* hash_next;
    struct crec* prev;
    struct crec* next;
    /* union is 16 bytes when doing IPv6, 8 bytes on 32 bit machines without IPv6 */
    union {
        struct all_addr addr;
        struct {
            union {
                struct crec* cache;
                struct interface_name* int_name;
            } target;
            uint32_t uid; /* 0 if union is interface-name */
        } cname;
        struct {
            struct blockdata* keydata;
            uint16_t keylen, flags, keytag;
            unsigned char algo;
        } key;
        struct {
            struct blockdata* keydata;
            uint16_t keylen, keytag;
            unsigned char algo;
            unsigned char digest;
        } ds;
    } addr;
    time_t ttd; /* time to die */
    /* used as class if DNSKEY/DS, index to source for F_HOSTS */
    uint32_t uid;
    uint16_t flags;
    union {
        char sname[SMALLDNAME];
        union bigname* bname;
        char* namep;
    } name;
};
/* struct sockaddr is not large enough to hold any address,
   and specifically not big enough to hold an IPv6 address.
   Blech. Roll our own. */
union mysockaddr {
    struct sockaddr sa;
    struct sockaddr_in in;
#if defined(HAVE_IPV6)
    struct sockaddr_in6 in6;
#endif
};
struct ServerFd {
    int fd;
    union mysockaddr source_addr;
//    char _interface[IF_NAMESIZE+1];
    std::string _interface;
    uint32_t preallocated;
    uint32_t used;
    uint32_t ifindex;
    struct ServerFd* next;
};
struct server {
    union mysockaddr addr, source_addr;
//    char interface[IF_NAMESIZE+1];
    std::string _interface;
    struct ServerFd* sfd;
    char* domain; /* set if this server only handles a domain. */
    int flags, tcpfd, edns_pktsz;
    time_t pktsz_reduced;
    uint32_t queries, failed_queries;
#ifdef HAVE_LOOP
    uint32_t uid;
#endif
    struct server* next;
};
struct ipsets {
    char** sets;
    char* domain;
    struct ipsets* next;
};
struct dhcp_lease {
    int clid_len;          /* length of client identifier */
    unsigned char* clid;   /* clientid */
    char* hostname, * fqdn; /* name from client-hostname option or config */
    char* old_hostname;    /* hostname before it moved to another lease */
    int flags;
    time_t expires;        /* lease expiry */
#ifdef HAVE_BROKEN_RTC
    uint32_t length;
#endif
    int hwaddr_len, hwaddr_type;
    unsigned char hwaddr[DHCP_CHADDR_MAX];
    struct in_addr addr, override, giaddr;
    unsigned char* extradata;
    uint32_t extradata_len, extradata_size;
    int last_interface;
    int new_interface;     /* save possible originated interface */
    int new_prefixlen;     /* and its prefix length */
#ifdef HAVE_DHCP6
    struct in6_addr addr6;
    int iaid;
    struct slaac_address {
      struct in6_addr addr;
      time_t ping_time;
      int backoff; /* zero -> confirmed */
      struct slaac_address *next;
    } *slaac_address;
    int vendorclass_count;
#endif
    struct dhcp_lease* next;
};
struct dhcp_netid {
    char* net;
    struct dhcp_netid* next;
};
struct dhcp_context {
    uint32_t lease_time, addr_epoch;
    struct in_addr netmask, broadcast;
    struct in_addr local, router;
    struct in_addr start, end; /* range of available addresses */
#ifdef HAVE_DHCP6
    struct in6_addr start6, end6; /* range of available addresses */
    struct in6_addr local6;
    int prefix, if_index;
    uint32_t valid, preferred, saved_valid;
    time_t ra_time, ra_short_period_start, address_lost_time;
    char *template_interface;
#endif
    int flags;
    struct dhcp_netid netid, * filter;
    struct dhcp_context* next, * current;
};
/* domain.c */
char* get_domain(struct in_addr addr);
uint64_t rand64(void);
int legal_hostname(char* name);
char* canonicalise(char* in, int* nomem);
void* safe_malloc(size_t size);
void safe_strncpy(char* dest, const char* src, size_t size);
void* whine_malloc(size_t size);
uint64_t addr6part(struct in6_addr *addr);
void setaddr6part(struct in6_addr *addr, uint64_t host);
int retry_send(ssize_t rc);
int parse_hex(char* in, unsigned char* out, int maxlen,
        uint32_t* wildcard_mask, int* mac_type);
int wildcard_match(const char* wildcard, const char* match);
int wildcard_matchn(const char* wildcard, const char* match, int num);
/* log.c */
void die(char* message, char* arg1, int exit_code) ATTRIBUTE_NORETURN;
int send_from(int fd, int nowild, char* packet, size_t len,
        union mysockaddr* to, struct all_addr* source,
        uint32_t iface);
/* network.c */
int indextoname(int fd, int index, char* name);
int iface_check(int family, struct all_addr* addr, char* name, int* auth);
int fix_fd(int fd);
int set_ipv6pktinfo(int fd);
void lease_update_file(time_t now);
void lease_update_dns(int force);
struct dhcp_lease *lease6_find_by_addr(struct in6_addr *net, int prefix, uint64_t addr);
uint64_t lease_find_max_addr6(struct dhcp_context *context);
void lease_update_slaac(time_t now);
struct dhcp_lease* lease_find_by_addr(struct in_addr addr);
struct in_addr lease_find_max_addr(struct dhcp_context* context);
void lease_prune(struct dhcp_lease* target, time_t now);
size_t dhcp_reply(struct dhcp_context* context, char* iface_name, int int_index,
        size_t sz, time_t now, int unicast_dest, int loopback,
        int* is_inform, int pxe, struct in_addr fallback, time_t recvtime);
int icmp_ping(struct in_addr addr);
void send_alarm(time_t event, time_t now);
/* bpf.c or netlink.c */
int iface_enumerate(int family, void* parm, int (callback)());
uint16_t dhcp6_reply(struct dhcp_context *context, int interface, char *iface_name,
               struct in6_addr *fallback, struct in6_addr *ll_addr, struct in6_addr *ula_addr,
               size_t sz, struct in6_addr *client_addr, time_t now);
void relay_upstream6(struct dhcp_relay *relay, ssize_t sz, struct in6_addr *peer_address, 
             uint32_t scope_id, time_t now);
uint16_t relay_reply6( struct sockaddr_in6 *peer, ssize_t sz, char *arrival_interface);
ssize_t recv_dhcp_packet(int fd, struct msghdr* msg);
int match_netid(struct dhcp_netid* check, struct dhcp_netid* pool, int tagnotneeded);
char* strip_hostname(char* hostname);
void log_context(int family, struct dhcp_context* context);
int save_counter(int newval);
time_t periodic_ra(time_t now);
void ra_start_unsolicited(time_t now, struct dhcp_context *context);
/* arp.c */
int find_mac(union mysockaddr* addr, unsigned char* mac, int lazy, time_t now);