src/radv-protocol.h

struct neigh_packet {
  uint8_t type, code;
  uint16_t checksum;
  uint16_t reserved;
  struct in6_addr target;
};