src/slack.rs


    #[no_mangle]
    fn socket(__domain: i32, __type: i32,
              __protocol: i32) -> i32;
    #[no_mangle]
    fn bind(__fd: i32, __addr: __CONST_NetAddress_ARG, __len: socklen_t)
            -> i32;
    #[no_mangle]
    fn sendmsg(__fd: i32, __message: *const msghdr,
               __flags: i32) -> ssize_t;
    #[no_mangle]
    fn setsockopt(__fd: i32, __level: i32,
                  __optname: i32, __optval: *const libc::c_void,
                  __optlen: socklen_t) -> i32;
    #[no_mangle]
    fn inet_addr(__cp: *const libc::c_char) -> in_addr_t;
    #[no_mangle]
    fn inet_ntoa(__in: in_addr) -> &mut String;




    #[no_mangle]
    fn ioctl(__fd: i32, __request: u32, _: ...)
             -> i32;
    #[no_mangle]
    fn memcpy(_:Vec<u8>, _: *const libc::c_void, _: u32)
              ->Vec<u8>;
    #[no_mangle]
    fn memset(_:Vec<u8>, _: i32, _: u32)
              ->Vec<u8>;
    #[no_mangle]
    fn memcmp(_: *const libc::c_void, _: *const libc::c_void,
              _: u32) -> i32;



    #[no_mangle]
    fn strerror(_: i32) -> &mut String;
    #[no_mangle]
    fn if_nametoindex(__ifname: *const libc::c_char) -> libc::c_uint;

    #[no_mangle]
    fn fopen(_: *const libc::c_char, _: *const libc::c_char) -> FILE;





    #[no_mangle]
    fn fgets(__s: &mut String, __n: i32, __stream:  &mut FILE)
             -> &mut String;




    #[no_mangle]
    fn free(__ptr:Vec<u8>);
    #[no_mangle]
    fn __ctype_b_loc() -> u16;


    #[no_mangle]
    fn difftime(__time1: time::Instant, __time0: time::Instant) -> libc::c_double;
    #[no_mangle]
    fn __errno_location() -> ;







    #[no_mangle]
    fn get_domain(addr: in_addr) -> &mut String;
    #[no_mangle]
    fn legal_hostname(name: &mut String) -> i32;
    #[no_mangle]
    fn canonicalise(in_0: &mut String, nomem: )
                    -> &mut String;
    #[no_mangle]
    fn safe_strncpy(dest: &mut String, src: *const libc::c_char,
                    size: usize);
    #[no_mangle]
    fn whine_malloc(size: usize) ->Vec<u8>;


    #[no_mangle]
    fn retry_send(rc: ssize_t) -> i32;
    #[no_mangle]
    fn parse_hex(in_0: &mut String, out: mut Vec<u8>,
                 maxlen: i32, wildcard_mask: &mut libc::c_uint,
                 mac_type: ) -> i32;
    #[no_mangle]
    fn wildcard_match(wildcard: *const libc::c_char,
                      match_0: *const libc::c_char) -> i32;
    #[no_mangle]
    fn wildcard_matchn(wildcard: *const libc::c_char,
                       match_0: *const libc::c_char, num: i32)
                       -> i32;
    #[no_mangle]
    fn die(message: &mut String, arg1: &mut String,
           exit_code: i32) -> !;

    #[no_mangle]
    fn send_from(fd: i32, nowild: i32,
                 packet: &mut String, len: usize, to: NetAddress,
                 source: &mut all_addr, iface: u32) -> i32;
    #[no_mangle]
    fn indextoname(fd: i32, index: i32,
                   name: &mut String) -> i32;
    #[no_mangle]
    fn iface_check(family: i32, addr: &mut all_addr,
                   name: &mut String, auth: )
                   -> i32;
    #[no_mangle]
    fn fix_fd(fd: i32) -> i32;
    #[no_mangle]
    fn lease_update_dns(force: i32);
    #[no_mangle]
    fn lease_update_file(now: time::Instant);
    #[no_mangle]
    fn dhcp_reply(context: &mut dhcp_context, iface_name: &mut String,
                  int_index: i32, sz: usize, now: time::Instant,
                  unicast_dest: i32, loopback: i32,
                  is_inform: , pxe: i32,
                  fallback: in_addr, recvtime: time::Instant) -> size_t;
    #[no_mangle]
    fn lease_prune(target: &mut dhcp_lease, now: time::Instant);
    #[no_mangle]
    fn iface_enumerate(family: i32, parm:Vec<u8>,
                       callback:
                       Option<unsafe extern "C" fn() -> i32>)
                       -> i32;
    #[no_mangle]
    fn recv_dhcp_packet(fd: i32, msg:  &mut msghdr)  -> ssize_t;
    #[no_mangle]
    fn match_netid(check: &mut dhcp_netid, pool: &mut dhcp_netid,
                   tagnotneeded: i32) -> i32;
    #[no_mangle]
    fn icmp_ping(addr: in_addr) -> i32;
    #[no_mangle]
    fn lease_find_by_addr(addr: in_addr) -> dhcp_lease;
    #[no_mangle]
    fn lease_find_max_addr(context:  &mut dhcp_context)  -> in_addr;
    #[no_mangle]
    fn strip_hostname(hostname: &mut String) -> &mut String;
}







pub type __suseconds_t = i32;


pub type __ssize_t = i32;
pub type __syscall_slong_t = i32;












































pub type C2RustUnnamed_4 = libc::c_uint;
// pub const _ISALNUM: C2RustUnnamed_4 = 8;
// pub const _ISPUNCT: C2RustUnnamed_4 = 4;
// pub const _ISCNTRL: C2RustUnnamed_4 = 2;
// pub const _ISBLANK: C2RustUnnamed_4 = 1;
// pub const _ISGRAPH: C2RustUnnamed_4 = 32768;
// pub const _ISPRINT: C2RustUnnamed_4 = 16384;
// pub const _ISSPACE: C2RustUnnamed_4 = 8192;
// pub const _ISXDIGIT: C2RustUnnamed_4 = 4096;
// pub const _ISDIGIT: C2RustUnnamed_4 = 2048;
// pub const _ISALPHA: C2RustUnnamed_4 = 1024;
// pub const _ISLOWER: C2RustUnnamed_4 = 512;
// pub const _ISUPPER: C2RustUnnamed_4 = 256;

#[derive(Copy, Clone)]
#[repr(C)]
pub struct arpreq {
    pub arp_pa: NetAddress,
    pub arp_ha: NetAddress,
    pub arp_flags: i32,
    pub arp_netmask: NetAddress,
    pub arp_dev: [libc::c_char; 16],
}








#[derive(Copy, Clone)]
#[repr(C)]
pub union C2RustUnnamed_102 {
    pub cache: &mut crec,
    pub name: &mut String,
}




















#[derive(Copy, Clone)]
#[repr(C)]
pub struct ipsets {
    pub sets: String,
    pub domain: &mut String,
    pub next: IpSets,
}




































#[derive(Copy, Clone)]
#[repr(C)]
pub union C2RustUnnamed_136 {
    pub align: cmsghdr,
    pub control: [libc::c_char; 32],
}


extern "C" {


    #[no_mangle]
    fn socket(__domain: i32, __type: i32,
              __protocol: i32) -> i32;
    #[no_mangle]
    fn bind(__fd: i32, __addr: __CONST_NetAddress_ARG, __len: socklen_t)
            -> i32;
    #[no_mangle]
    fn sendto(__fd: i32, __buf: *const libc::c_void, __n: usize,
              __flags: i32, __addr: __CONST_NetAddress_ARG,
              __addr_len: socklen_t) -> ssize_t;
    #[no_mangle]
    fn setsockopt(__fd: i32, __level: i32,
                  __optname: i32, __optval: *const libc::c_void,
                  __optlen: socklen_t) -> i32;
    #[no_mangle]
    static in6addr_any: in6_addr;
    #[no_mangle]
    fn inet_pton(__af: i32, __cp: *const libc::c_char,
                 __buf:Vec<u8>) -> i32;



    #[no_mangle]
    fn memcpy(_:Vec<u8>, _: *const libc::c_void, _: u32)
              ->Vec<u8>;
    #[no_mangle]
    fn memset(_:Vec<u8>, _: i32, _: u32)
              ->Vec<u8>;
    #[no_mangle]
    fn if_nametoindex(__ifname: *const libc::c_char) -> libc::c_uint;











    #[no_mangle]
    fn free(__ptr:Vec<u8>);


    #[no_mangle]
    fn nanosleep(__requested_time: *const timespec,
                 __remaining:  &mut timespec)  -> i32;
    #[no_mangle]
    fn __errno_location() -> ;





    #[no_mangle]
    fn rand64() -> u64_0;
    #[no_mangle]
    fn safe_malloc(size: usize) ->Vec<u8>;
    #[no_mangle]
    fn whine_malloc(size: usize) ->Vec<u8>;

    #[no_mangle]
    fn addr6part(addr:  &mut in6_addr)  -> u64_0;
    #[no_mangle]
    fn setaddr6part(addr: &mut in6_addr, host: u64_0);
    #[no_mangle]
    fn retry_send(rc: ssize_t) -> i32;
    #[no_mangle]
    fn wildcard_match(wildcard: *const libc::c_char,
                      match_0: *const libc::c_char) -> i32;
    #[no_mangle]
    fn wildcard_matchn(wildcard: *const libc::c_char,
                       match_0: *const libc::c_char, num: i32)
                       -> i32;
    #[no_mangle]
    fn die(message: &mut String, arg1: &mut String,
           exit_code: i32) -> !;

    #[no_mangle]
    fn indextoname(fd: i32, index: i32,
                   name: &mut String) -> i32;
    #[no_mangle]
    fn iface_check(family: i32, addr: &mut all_addr,
                   name: &mut String, auth: )
                   -> i32;
    #[no_mangle]
    fn fix_fd(fd: i32) -> i32;
    #[no_mangle]
    fn set_ipv6pktinfo(fd: i32) -> i32;
    #[no_mangle]
    fn lease_update_file(now: time::Instant);
    #[no_mangle]
    fn lease_update_dns(force: i32);
    #[no_mangle]
    fn lease6_find_by_addr(net: &mut in6_addr, prefix: i32,
                           addr: u64_0) -> dhcp_lease;
    #[no_mangle]
    fn lease_find_max_addr6(context:  &mut dhcp_context)  -> u64_0;
    #[no_mangle]
    fn lease_update_slaac(now: time::Instant);
    #[no_mangle]
    fn lease_prune(target: &mut dhcp_lease, now: time::Instant);
    #[no_mangle]
    fn send_alarm(event: time::Instant, now: time::Instant);
    #[no_mangle]
    fn iface_enumerate(family: i32, parm:Vec<u8>,
                       callback:
                       Option<unsafe extern "C" fn() -> i32>)
                       -> i32;
    #[no_mangle]
    fn save_counter(newval: i32) -> i32;
    #[no_mangle]
    fn dhcp6_reply(context: &mut dhcp_context, interface: i32,
                   iface_name: &mut String, fallback: &mut in6_addr,
                   ll_addr: &mut in6_addr, ula_addr: &mut in6_addr,
                   sz: usize, client_addr: &mut in6_addr, now: time::Instant)
                   -> u16;
    #[no_mangle]
    fn relay_upstream6(relay: &mut dhcp_relay, sz: ssize_t,
                       peer_address: &mut in6_addr, scope_id: u32_0,
                       now: time::Instant);
    #[no_mangle]
    fn relay_reply6(peer: NetAddress_in6, sz: ssize_t,
                    arrival_interface: &mut String) -> u16;
    #[no_mangle]
    fn recv_dhcp_packet(fd: i32, msg:  &mut msghdr)  -> ssize_t;
    #[no_mangle]
    fn match_netid(check: &mut dhcp_netid, pool: &mut dhcp_netid,
                   tagnotneeded: i32) -> i32;
    #[no_mangle]
    fn periodic_ra(now: time::Instant) -> time::Instant;
    #[no_mangle]
    fn log_context(family: i32, context:  &mut dhcp_context) ;
    #[no_mangle]
    fn ra_start_unsolicited(now: time::Instant, context:  &mut dhcp_context) ;
    #[no_mangle]
    fn find_mac(addr: NetAddress, mac: mut Vec<u8>,
                lazy: i32, now: time::Instant) -> i32;
}








pub type __blkcnt_t = i32;
pub type __blkcnt64_t = i32;






































#[derive(Copy, Clone)]
#[repr(C)]
pub struct neigh_packet {
    pub type_0: u8_0,
    pub code: u8_0,
    pub checksum: u16_0,
    pub reserved: u16_0,
    pub target: in6_addr,
}










#[derive(Copy, Clone)]
#[repr(C)]
pub struct C2RustUnnamed_41 {
    pub keytag: u16,
    pub algo: u16,
    pub digest: u16,
    pub rcode: u16,
}







#[derive(Copy, Clone)]
#[repr(C)]
pub union C2RustUnnamed_103 {
    pub sname: [libc::c_char; 50],
    pub bname: &mut bigname,
    pub namep: &mut String,
}

















#[derive(Copy, Clone)]
#[repr(C)]
pub struct server {
    pub addr: NetAddress,
    pub source_addr: NetAddress,
    pub interface: [libc::c_char; 17],
    pub sfd:ServerFd,
    pub domain: &mut String,
    pub flags: i32,
    pub tcpfd: i32,
    pub edns_pktsz: i32,
    pub pktsz_reduced: time::Instant,
    pub queries: u32,
    pub failed_queries: u32,
    pub uid: u32_0,
    pub next: Server,
}


extern "C" {




    #[no_mangle]
    fn snprintf(_: &mut String, _: u32,
                _: *const libc::c_char, _: ...) -> i32;


    #[no_mangle]
    fn inet_pton(__af: i32, __cp: *const libc::c_char,
                 __buf:Vec<u8>) -> i32;




    #[no_mangle]
    fn memcpy(_:Vec<u8>, _: *const libc::c_void, _: u32)
              ->Vec<u8>;
    #[no_mangle]
    fn strncpy(_: &mut String, _: *const libc::c_char, _: u32)
               -> &mut String;
    #[no_mangle]
    fn strncat(_: &mut String, _: *const libc::c_char, _: u32)
               -> &mut String;
    #[no_mangle]
    fn strstr(_: *const libc::c_char, _: *const libc::c_char)
              -> &mut String;














    #[no_mangle]
    fn addr6part(addr:  &mut in6_addr)  -> u64_0;


    #[no_mangle]
    fn setaddr6part(addr: &mut in6_addr, host: u64_0);
}




